Publish wit-bindgen-gen-core

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "wit-bindgen-cli"
-version = "0.1.0"
 authors = ["Alex Crichton <alex@alexcrichton.com>"]
 edition = "2018"
+name = "wit-bindgen-cli"
+version = "0.1.0"
 
 [workspace]
 members = [
@@ -19,15 +19,15 @@ test = false
 
 [dependencies]
 anyhow = "1.0"
-structopt = { version = "0.3", default-features = false }
-wit-bindgen-gen-core = { path = 'crates/gen-core', features = ['witx-compat'] }
-wit-bindgen-gen-rust-wasm = { path = 'crates/gen-rust-wasm', features = ['structopt'] }
-wit-bindgen-gen-wasmtime = { path = 'crates/gen-wasmtime', features = ['structopt'] }
-wit-bindgen-gen-wasmtime-py = { path = 'crates/gen-wasmtime-py', features = ['structopt'] }
-wit-bindgen-gen-js = { path = 'crates/gen-js', features = ['structopt'] }
-wit-bindgen-gen-c = { path = 'crates/gen-c', features = ['structopt'] }
-wit-bindgen-gen-markdown = { path = 'crates/gen-markdown', features = ['structopt'] }
-wit-bindgen-gen-spidermonkey = { path = 'crates/gen-spidermonkey', features = ['structopt'] }
+cosmian-wit-bindgen-gen-core = {path = 'crates/gen-core', features = ['witx-compat']}
+structopt = {version = "0.3", default-features = false}
+wit-bindgen-gen-c = {path = 'crates/gen-c', features = ['structopt']}
+wit-bindgen-gen-js = {path = 'crates/gen-js', features = ['structopt']}
+wit-bindgen-gen-markdown = {path = 'crates/gen-markdown', features = ['structopt']}
+wit-bindgen-gen-rust-wasm = {path = 'crates/gen-rust-wasm', features = ['structopt']}
+wit-bindgen-gen-spidermonkey = {path = 'crates/gen-spidermonkey', features = ['structopt']}
+wit-bindgen-gen-wasmtime = {path = 'crates/gen-wasmtime', features = ['structopt']}
+wit-bindgen-gen-wasmtime-py = {path = 'crates/gen-wasmtime-py', features = ['structopt']}
 
 # Compiling `spidermonkey.wasm` takes way too long without this.
 [profile.dev.package.cranelift-codegen]
