--- a/crates/gen-markdown/Cargo.toml
+++ b/crates/gen-markdown/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
+edition = "2018"
 name = "wit-bindgen-gen-markdown"
 version = "0.1.0"
-edition = "2018"
 
 [lib]
 doctest = false
 test = false
 
 [dependencies]
+cosmian-wit-bindgen-gen-core = {path = '../gen-core', version = '0.1.0'}
 heck = "0.3"
-pulldown-cmark = { version = "0.8", default-features = false }
-structopt = { version = "0.3", default-features = false, optional = true }
-wit-bindgen-gen-core = { path = '../gen-core', version = '0.1.0' }
+pulldown-cmark = {version = "0.8", default-features = false}
+structopt = {version = "0.3", default-features = false, optional = true}
