--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -3,6 +3,8 @@ name = "cosmian-wit-parser"
 version = "0.1.0"
 authors = ["Alex Crichton <alex@alexcrichton.com>"]
 edition = "2018"
+description = "wit parser"
+license = "Apache-2.0"
 
 [dependencies]
 id-arena = "2"
