--- a/crates/rust-wasm-impl/Cargo.toml
+++ b/crates/rust-wasm-impl/Cargo.toml
@@ -1,19 +1,21 @@
 [package]
+authors = ["Alex Crichton <alex@alexcrichton.com>"]
+description = "wit-bindgen rust implementation"
+edition = "2018"
+license = "Apache-2.0"
 name = "wit-bindgen-rust-impl"
 version = "0.1.0"
-authors = ["Alex Crichton <alex@alexcrichton.com>"]
-edition = "2018"
 
 [lib]
-proc-macro = true
 doctest = false
+proc-macro = true
 test = false
 
 [dependencies]
+cosmian-wit-bindgen-gen-core = {path = "../gen-core", version = "0.1"}
 proc-macro2 = "1.0"
 syn = "1.0"
-wit-bindgen-gen-core = { path = "../gen-core", version = "0.1" }
-wit-bindgen-gen-rust-wasm = { path = "../gen-rust-wasm", version = "0.1" }
+wit-bindgen-gen-rust-wasm = {path = "../gen-rust-wasm", version = "0.1"}
 
 [features]
-witx-compat = ['wit-bindgen-gen-core/witx-compat']
+witx-compat = ['cosmian-wit-bindgen-gen-core/witx-compat']
