--- a/crates/test-helpers/Cargo.toml
+++ b/crates/test-helpers/Cargo.toml
@@ -1,39 +1,39 @@
 [package]
-name = "test-helpers"
-version = "0.1.0"
 authors = ["Alex Crichton <alex@alexcrichton.com>"]
 edition = "2018"
+name = "test-helpers"
 publish = false
+version = "0.1.0"
 
 [lib]
-proc-macro = true
 doctest = false
+proc-macro = true
 test = false
 
 [dependencies]
 backtrace = "0.3"
+cosmian-wit-bindgen-gen-core = {path = '../gen-core'}
+cosmian-wit-parser = {path = '../parser', features = ['witx-compat']}
+filetime = "0.2"
 heck = "0.3"
 ignore = "0.4"
 proc-macro2 = "1.0.27"
 quote = "1.0.9"
-wit-bindgen-gen-core = { path = '../gen-core' }
-wit-bindgen-gen-rust-wasm = { path = '../gen-rust-wasm', optional = true }
-wit-bindgen-gen-wasmtime = { path = '../gen-wasmtime', optional = true }
-wit-bindgen-gen-wasmtime-py = { path = '../gen-wasmtime-py', optional = true }
-wit-bindgen-gen-js = { path = '../gen-js', optional = true }
-wit-bindgen-gen-c = { path = '../gen-c', optional = true }
-wit-bindgen-gen-spidermonkey = { path = '../gen-spidermonkey', optional = true }
-wit-parser = { path = '../parser', features = ['witx-compat'] }
-filetime = "0.2"
+wit-bindgen-gen-c = {path = '../gen-c', optional = true}
+wit-bindgen-gen-js = {path = '../gen-js', optional = true}
+wit-bindgen-gen-rust-wasm = {path = '../gen-rust-wasm', optional = true}
+wit-bindgen-gen-spidermonkey = {path = '../gen-spidermonkey', optional = true}
+wit-bindgen-gen-wasmtime = {path = '../gen-wasmtime', optional = true}
+wit-bindgen-gen-wasmtime-py = {path = '../gen-wasmtime-py', optional = true}
 
 [build-dependencies]
-wit-bindgen-gen-c = { path = '../gen-c' }
-wit-bindgen-gen-spidermonkey = { path = '../gen-spidermonkey' }
-wit-bindgen-gen-core = { path = '../gen-core' }
+cosmian-wit-bindgen-gen-core = {path = '../gen-core'}
+wit-bindgen-gen-c = {path = '../gen-c'}
+wit-bindgen-gen-spidermonkey = {path = '../gen-spidermonkey'}
 
 [features]
 default = ['wasm-rust', 'wasm-c', 'wasm-spidermonkey']
-witx-compat = ['wit-bindgen-gen-core/witx-compat']
-wasm-rust = []
 wasm-c = []
+wasm-rust = []
 wasm-spidermonkey = []
+witx-compat = ['cosmian-wit-bindgen-gen-core/witx-compat']
