--- a/crates/wasmtime-impl/Cargo.toml
+++ b/crates/wasmtime-impl/Cargo.toml
@@ -1,21 +1,21 @@
 [package]
-name = "wit-bindgen-wasmtime-impl"
-version = "0.1.0"
 authors = ["Alex Crichton <alex@alexcrichton.com>"]
 edition = "2018"
+name = "wit-bindgen-wasmtime-impl"
+version = "0.1.0"
 
 [lib]
-proc-macro = true
 doctest = false
+proc-macro = true
 test = false
 
 [dependencies]
+cosmian-wit-bindgen-gen-core = {path = "../gen-core", version = "0.1"}
 proc-macro2 = "1.0"
 syn = "1.0"
-wit-bindgen-gen-core = { path = "../gen-core", version = "0.1" }
-wit-bindgen-gen-wasmtime = { path = "../gen-wasmtime", version = "0.1" }
+wit-bindgen-gen-wasmtime = {path = "../gen-wasmtime", version = "0.1"}
 
 [features]
-witx-compat = ['wit-bindgen-gen-wasmtime/witx-compat']
-tracing = []
 async = []
+tracing = []
+witx-compat = ['wit-bindgen-gen-wasmtime/witx-compat']
