--- a/crates/wit-bindgen-demo/Cargo.toml
+++ b/crates/wit-bindgen-demo/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
-name = "wit-bindgen-demo"
-version = "0.1.0"
 authors = ["Alex Crichton <alex@alexcrichton.com>"]
 edition = "2018"
+name = "wit-bindgen-demo"
 publish = false
+version = "0.1.0"
 
 [lib]
 crate-type = ['cdylib']
-test = false
 doctest = false
+test = false
 
 [dependencies]
-wit-bindgen-gen-core = { path = '../gen-core', features = ['witx-compat'] }
-wit-bindgen-gen-rust-wasm = { path = '../gen-rust-wasm' }
-wit-bindgen-gen-wasmtime = { path = '../gen-wasmtime' }
-wit-bindgen-gen-wasmtime-py = { path = '../gen-wasmtime-py' }
-wit-bindgen-gen-js = { path = '../gen-js' }
-wit-bindgen-gen-c = { path = '../gen-c' }
-wit-bindgen-gen-markdown = { path = '../gen-markdown' }
-wit-bindgen-gen-spidermonkey = { path = '../gen-spidermonkey' }
-wit-bindgen-rust = { path = '../rust-wasm' }
+cosmian-wit-bindgen-gen-core = {path = '../gen-core', features = ['witx-compat']}
 wasmprinter = "0.2.29"
+wit-bindgen-gen-c = {path = '../gen-c'}
+wit-bindgen-gen-js = {path = '../gen-js'}
+wit-bindgen-gen-markdown = {path = '../gen-markdown'}
+wit-bindgen-gen-rust-wasm = {path = '../gen-rust-wasm'}
+wit-bindgen-gen-spidermonkey = {path = '../gen-spidermonkey'}
+wit-bindgen-gen-wasmtime = {path = '../gen-wasmtime'}
+wit-bindgen-gen-wasmtime-py = {path = '../gen-wasmtime-py'}
+wit-bindgen-rust = {path = '../rust-wasm'}
