--- a/crates/gen-core/Cargo.toml
+++ b/crates/gen-core/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 authors = ["Alex Crichton <alex@alexcrichton.com>"]
+description = "wit-bindgen-gen-core"
 edition = "2018"
+license = "Apache-2.0"
 name = "cosmian-wit-bindgen-gen-core"
 version = "0.1.0"
 
