--- a/crates/gen-rust-wasm/Cargo.toml
+++ b/crates/gen-rust-wasm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Alex Crichton <alex@alexcrichton.com>"]
 edition = "2018"
-name = "wit-bindgen-gen-rust-wasm"
+name = "cosmian-wit-bindgen-gen-rust-wasm"
 version = "0.1.0"
 
 [lib]
@@ -10,12 +10,12 @@ test = false
 
 [dependencies]
 cosmian-wit-bindgen-gen-core = {path = '../gen-core', version = '0.1.0'}
+cosmian-wit-bindgen-gen-rust = {path = '../gen-rust', version = '0.1.0'}
 heck = "0.3"
 structopt = {version = "0.3", default-features = false, optional = true}
-wit-bindgen-gen-rust = {path = '../gen-rust', version = '0.1.0'}
 
 [dev-dependencies]
-test-helpers = {path = '../test-helpers', features = ['wit-bindgen-gen-rust-wasm']}
+test-helpers = {path = '../test-helpers', features = ['cosmian-wit-bindgen-gen-rust-wasm']}
 wit-bindgen-rust = {path = '../rust-wasm'}
 
 [features]
