--- a/crates/gen-rust/Cargo.toml
+++ b/crates/gen-rust/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Alex Crichton <alex@alexcrichton.com>"]
 edition = "2018"
-name = "wit-bindgen-gen-rust"
+name = "cosmian-wit-bindgen-gen-rust"
 version = "0.1.0"
 
 [lib]
