--- a/crates/gen-rust/Cargo.toml
+++ b/crates/gen-rust/Cargo.toml
@@ -3,11 +3,13 @@ authors = ["Alex Crichton <alex@alexcrichton.com>"]
 edition = "2018"
 name = "cosmian-wit-bindgen-gen-rust"
 version = "0.1.0"
+license = "Apache-2.0"
+description = "wit-bindgen-gen-rust"
 
 [lib]
 doctest = false
 test = false
 
 [dependencies]
-cosmian-wit-bindgen-gen-core = {path = '../gen-core'}
+cosmian-wit-bindgen-gen-core = {path = '../gen-core', version = '0.1.0'}
 heck = "0.3"
