--- a/crates/rust-wasm-impl/Cargo.toml
+++ b/crates/rust-wasm-impl/Cargo.toml
@@ -3,7 +3,7 @@ authors = ["Alex Crichton <alex@alexcrichton.com>"]
 description = "wit-bindgen rust implementation"
 edition = "2018"
 license = "Apache-2.0"
-name = "wit-bindgen-rust-impl"
+name = "cosmian-wit-bindgen-rust-impl"
 version = "0.1.0"
 
 [lib]
