--- a/crates/rust-wasm/Cargo.toml
+++ b/crates/rust-wasm/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
-name = "wit-bindgen-rust"
-version = "0.1.0"
 authors = ["Alex Crichton <alex@alexcrichton.com>"]
+description = "cosmian-wit-bindgen-rust"
 edition = "2018"
+license = "Apache-2.0"
+name = "cosmian-wit-bindgen-rust"
+version = "0.1.0"
 
 [dependencies]
-wit-bindgen-rust-impl = { path = "../rust-wasm-impl" }
 async-trait = "0.1.51"
 bitflags = "1.3"
+cosmian-wit-bindgen-rust-impl = {path = "../rust-wasm-impl"}
 
 [features]
-witx-compat = ['wit-bindgen-rust-impl/witx-compat']
+witx-compat = ['cosmian-wit-bindgen-rust-impl/witx-compat']
