--- a/crates/test-modules/modules/crates/resources-invalid-main/Cargo.toml
+++ b/crates/test-modules/modules/crates/resources-invalid-main/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "resources-invalid-main"
-version = "0.1.0"
 authors = ["Peter Huene <peter@huene.dev>"]
 edition = "2018"
+name = "resources-invalid-main"
 publish = false
+version = "0.1.0"
 
 [dependencies]
-wit-bindgen-rust = { path = "../../../../rust-wasm" }
+cosmian-wit-bindgen-rust = {path = "../../../../rust-wasm"}
