--- a/crates/wasmlink/demo/markdown/Cargo.toml
+++ b/crates/wasmlink/demo/markdown/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "markdown"
-version = "0.1.0"
 authors = ["Peter Huene <peter@huene.dev>"]
 edition = "2018"
+name = "markdown"
+version = "0.1.0"
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
+cosmian-wit-bindgen-rust = {path = "../../../rust-wasm"}
 pulldown-cmark = "0.8.0"
-wit-bindgen-rust = { path = "../../../rust-wasm" }
 
 [workspace]
