--- a/crates/wasmlink/demo/renderer/Cargo.toml
+++ b/crates/wasmlink/demo/renderer/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "renderer"
-version = "0.1.0"
 authors = ["Peter Huene <peter@huene.dev>"]
 edition = "2018"
+name = "renderer"
+version = "0.1.0"
 
 [dependencies]
-wit-bindgen-rust = { path = "../../../rust-wasm" }
+cosmian-wit-bindgen-rust = {path = "../../../rust-wasm"}
 
 [workspace]
