--- a/crates/wit-bindgen-demo/Cargo.toml
+++ b/crates/wit-bindgen-demo/Cargo.toml
@@ -13,6 +13,7 @@ test = false
 [dependencies]
 cosmian-wit-bindgen-gen-core = {path = '../gen-core', features = ['witx-compat']}
 cosmian-wit-bindgen-gen-rust-wasm = {path = '../gen-rust-wasm'}
+cosmian-wit-bindgen-rust = {path = '../rust-wasm'}
 wasmprinter = "0.2.29"
 wit-bindgen-gen-c = {path = '../gen-c'}
 wit-bindgen-gen-js = {path = '../gen-js'}
@@ -20,4 +21,3 @@ wit-bindgen-gen-markdown = {path = '../gen-markdown'}
 wit-bindgen-gen-spidermonkey = {path = '../gen-spidermonkey'}
 wit-bindgen-gen-wasmtime = {path = '../gen-wasmtime'}
 wit-bindgen-gen-wasmtime-py = {path = '../gen-wasmtime-py'}
-wit-bindgen-rust = {path = '../rust-wasm'}
