--- a/crates/rust-wasm/Cargo.toml
+++ b/crates/rust-wasm/Cargo.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 [dependencies]
 async-trait = "0.1.51"
 bitflags = "1.3"
-cosmian-wit-bindgen-rust-impl = {path = "../rust-wasm-impl"}
+cosmian-wit-bindgen-rust-impl = {path = "../rust-wasm-impl", version = "0.1.0"}
 
 [features]
 witx-compat = ['cosmian-wit-bindgen-rust-impl/witx-compat']
